# pharmapath

./: .gitignore  HANDOFF.md  PLAN.md  README.md  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/agent/: anthropic_loop.py  gemini_loop.py  handlers.py  loop.py  openai_loop.py  sessions.py  system_prompt.py  tool_runner.py  tools.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/graph/: build.py  live_enrich.py  queries.py  store.py
backend/app/ingestion/: address.py  decrs.py  distributors.py  distributors_big3.py  fetch.py  geography.py  label.py  models.py  name_normalize.py  ndc.py  orange_book.py  repackagers.py
backend/app/matching/: engine.py  models.py  resolve.py  scoring.py
backend/app/services/: cache.py  openfda.py  openfda_models.py
backend/tests/: conftest.py  test_address.py  test_agent_loop.py  test_anthropic_loop.py  test_decrs.py  test_distributors.py  test_engine.py  test_gemini_loop.py  test_graph_build.py  test_graph_routes.py  test_handlers.py  test_health.py  test_live_enrich.py  test_name_normalize.py  test_ndc_ingestion.py  test_openai_loop.py  test_orange_book.py  test_orange_book_ingestion.py  test_repackagers.py  test_resolve.py  test_scoring.py  test_store_seed_scope.py  test_tool_runner.py
backend/tests/fixtures/: ndc_sample.json  orange_book_products.txt
data/: MANUAL_DOWNLOADS.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Chat.tsx  ComparisonCard.tsx  ComponentRouter.tsx  MapView.tsx  (+5 more)
(+62 files in other folders)
