[project]
name = "easemed-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.111.0",
    "fastapi>=0.138.0",
    "geopy>=2.4.1",
    "haversine>=2.9.0",
    "httpx>=0.28.1",
    "networkx>=3.6.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "rapidfuzz>=3.14.5",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
